# modul-12

./: .coverage  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 00e70d137472_create_table_todos.py  6d5c1f6bf462_add_verify_for_user.py  a48615f4c1ec_add_user_role.py  b722671d8a28_add_table_users.py  c3fe829872f7_create_table_users.py
postgres-data/base/1/: 2619  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16392  16395  16421  16422  16427  16428  16430  16458  16463  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  (+5 more)
postgres-data/base/16466/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  (+223 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py  users.py
src/routes/: auth.py  todos.py  users.py
src/schemas/: todo.py  user.py
src/services/: auth.py  email.py  roles.py
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_todos.py  test_e2e_users.py  test_unit_repository_todo.py
(+3 files in other folders)
