[tool.poetry]
name = "modul-12"
version = "0.1.0"
description = ""
authors = ["TaniaFedorchenko <tasfedorchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
uvicorn = "^0.30.4"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.8"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.4"
cloudinary = "^1.41.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--doctest-modules'
testpaths = ['tests', ]
pythonpath = '.'
asyncio_default_fixture_loop_scope = "function"
filterwarnings = "ignore::DeprecationWarning" # ей параметр прибирає відповідні попередження
